# llm-book-updater

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COST_TRACKING.md  FINAL_OPTIMIZATION_PLAN.md  GEMINI.md  MODERNIZE_OPTIMIZATION_PLAN.md  PYDANTIC_MIGRATION_PLAN.md  README.md  __main__.py  build.py  cli.py  main.py  pyproject.toml  test_phase_factory.py  test_system_prompt_formatting.py  test_system_prompt_metadata.py
assets/: book_cover_prompt.md
books/: README.md  base_builder.py  build_template.py  exclude_h1.lua
cli/: __init__.py  __main__.py  build.py  common.py  consolidate.py  cover.py  mini_cover.py  release.py  run.py
docs/: PYDANTIC_USAGE.md
examples/: annotation_example.py  cost_tracking_example.py  default_postprocessors_example.py  length_reduction_example.py  metadata_example.py  new_pipeline_example.py  phase_factory_example.py  post_processing_example.py  provider_parameter_example.py  retry_example.py  run_pipeline_example.py  special_tags_skip_example.py  tags_to_preserve_example.py
prompts/: annotate.md  annotate_system.md  annotate_user.md  annotation_user.md  edit.md  edit_system.md  edit_user.md  final.md  final_identify_system.md  final_identify_user.md  final_implement_system.md  final_implement_user.md  final_system.md  final_user.md  final_user_prompt.md  flashcards_system.md  flashcards_user.md  formatting.md  formatting_system.md  formatting_user.md  introduction_annotation.md  introduction_system.md  introduction_user.md  modernize.md  modernize_system.md  modernize_user.md  notes_system.md  notes_user.md  summary_annotation.md  summary_system.md  summary_user.md
scripts/: pandoc_epub.ps1
src/: api_models.py  config.py  constants.py  cost_tracker.py  cost_tracking_wrapper.py  final_two_stage_phase.py  llm_model.py  llm_phase.py  logging_config.py  metadata_consolidator.py  pipeline.py  (+6 more)
(+129 files in other folders)
